[gd_scene load_steps=23 format=3 uid="uid://drur3dcgyl8c5"]

[ext_resource type="Script" path="res://project/Level/level_3.gd" id="1_verc3"]
[ext_resource type="Texture2D" uid="uid://bgmkioinxsn1l" path="res://assets/level1/Background/Background1.png" id="2_nsuya"]
[ext_resource type="PackedScene" uid="uid://db3v5obicktak" path="res://project/Level/butterfly.tscn" id="3_cijdn"]
[ext_resource type="Texture2D" uid="uid://bhvhxgt0msyld" path="res://assets/level1/Background/Black_layer.png" id="4_rrkme"]
[ext_resource type="Texture2D" uid="uid://cej0m86tp12qp" path="res://assets/level1/Background/Background_black.png" id="5_sxvdb"]
[ext_resource type="PackedScene" uid="uid://di8ggvgm0n5jc" path="res://project/Level/spawn_points.tscn" id="6_0s4wu"]
[ext_resource type="Texture2D" uid="uid://babhrqjwfxcdy" path="res://assets/backgrounds/light.png" id="7_oeoms"]
[ext_resource type="PackedScene" uid="uid://ivfp8gun81yp" path="res://project/Soul/ina.tscn" id="8_bdcp4"]
[ext_resource type="PackedScene" uid="uid://cr6aql8rvho0w" path="res://project/Dialog/dialog.tscn" id="9_2bpd6"]
[ext_resource type="PackedScene" uid="uid://dp0cgtj05w25g" path="res://project/Level/hearts.tscn" id="10_btgq6"]
[ext_resource type="PackedScene" uid="uid://dyswtt6lkwike" path="res://project/Level/support.tscn" id="11_8qj5j"]
[ext_resource type="AudioStream" uid="uid://dkyvfdrxmhhcu" path="res://assets/SFX/Level Start Spirit Spiral.mp3" id="12_7lujg"]
[ext_resource type="AudioStream" uid="uid://rrh5uxwld3rp" path="res://assets/SFX/Click MISS.mp3" id="12_sexhb"]
[ext_resource type="AudioStream" uid="uid://4rlotoanjaia" path="res://assets/SFX/Kill All Enemies Special Attack.mp3" id="13_h16qm"]
[ext_resource type="AudioStream" uid="uid://ci31xpalmkjl3" path="res://assets/SFX/Extra Heart Special Attack.mp3" id="14_6qyah"]
[ext_resource type="AudioStream" uid="uid://do5fet3ssxy4n" path="res://assets/SFX/Slow Enemies Special Attack.mp3" id="15_3efv1"]

[sub_resource type="Animation" id="Animation_el77p"]
resource_name = "Finish"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.19, 16.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 1.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_next_leve"
}]
}

[sub_resource type="Animation" id="Animation_3wlfk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("light_path/PathFollow2D:progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3468.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("light_path/PathFollow2D/appear_light:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("light_path/PathFollow2D/appear_light:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("soul:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("light_path/PathFollow2D/appear_light:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("light_path/PathFollow2D2:progress")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("light_path/PathFollow2D2/appear_light:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("light_path/PathFollow2D3:progress")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("light_path/PathFollow2D3/appear_light:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dugvw"]
resource_name = "Start"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("soul:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.5, 4.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.7, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 12.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("light_path/PathFollow2D:progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3468.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("light_path/PathFollow2D/appear_light:texture_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4.2, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 2.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("light_path/PathFollow2D/appear_light:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(4.5, 4.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("light_path/PathFollow2D/appear_light:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.5, 4.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_dialog_start_timeout"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("light_path/PathFollow2D2:progress")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2, 4.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 3430.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("light_path/PathFollow2D2/appear_light:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 4.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("light_path/PathFollow2D3:progress")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.3, 4.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 3390.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("light_path/PathFollow2D3/appear_light:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 4.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/11/type = "audio"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("sound")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("12_7lujg")
}],
"times": PackedFloat32Array(-1.3)
}
tracks/11/use_blend = true

[sub_resource type="Animation" id="Animation_tfajr"]
resource_name = "lost"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_over"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4g37i"]
_data = {
"Finish": SubResource("Animation_el77p"),
"RESET": SubResource("Animation_3wlfk"),
"Start": SubResource("Animation_dugvw"),
"lost": SubResource("Animation_tfajr")
}

[sub_resource type="Curve2D" id="Curve2D_c6fsr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 970, 445, 0, 0, 0, 0, 826, 690, 184.983, -22.6621, -184.983, 22.6621, 542, 835, 8.0936, 17.8059, -8.0936, -17.8059, 224, 686, 33.9931, 126.26, -33.9931, -126.26, 103, 473, 0, 0, 0, 0, 211, 252, -216.099, -9.71232, 216.099, 9.71232, 495, 164, 0, 0, 0, 0, 800, 382, 202.34, -29.9463, -202.34, 29.9463, 556, 652, 0, 0, 0, 0, 336, 509, -168.347, 42.8961, 168.347, -42.8961, 465, 325, 0, 0, 0, 0, 623, 439, 0, 0, 0, 0, 517, 455)
}
point_count = 13

[node name="level3" type="Node2D"]
script = ExtResource("1_verc3")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(512, 448)
scale = Vector2(4, 4)
texture = ExtResource("2_nsuya")

[node name="butterfly" parent="background" instance=ExtResource("3_cijdn")]
position = Vector2(-56.5, 37.5923)

[node name="butterfly2" parent="background" instance=ExtResource("3_cijdn")]
position = Vector2(-33.25, -28.6083)
frame = 1
frame_progress = 0.0

[node name="butterfly3" parent="background" instance=ExtResource("3_cijdn")]
position = Vector2(22, -46)
frame = 5
frame_progress = 0.0

[node name="butterfly4" parent="background" instance=ExtResource("3_cijdn")]
position = Vector2(70, -38.5)
frame = 4
frame_progress = 0.0

[node name="butterfly5" parent="background" instance=ExtResource("3_cijdn")]
position = Vector2(45.5, 60)
frame = 2
frame_progress = 0.0

[node name="black" type="Sprite2D" parent="background"]
modulate = Color(1, 1, 1, 0.615686)
z_index = 2
texture = ExtResource("4_rrkme")

[node name="black2" type="Sprite2D" parent="background"]
texture = ExtResource("5_sxvdb")

[node name="points" parent="." instance=ExtResource("6_0s4wu")]

[node name="enemies" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(512, 448)
scale = Vector2(4, 4)
color = Color(0.917647, 0.27451, 0, 1)
energy = 0.0
blend_mode = 2
texture = ExtResource("7_oeoms")
texture_scale = 0.5

[node name="dialog_start" type="Timer" parent="."]
one_shot = true

[node name="wall_points" type="Node2D" parent="."]

[node name="left" type="Marker2D" parent="wall_points"]
position = Vector2(0, 448)

[node name="right" type="Marker2D" parent="wall_points"]
position = Vector2(1344, 448)

[node name="soul" parent="." instance=ExtResource("8_bdcp4")]
modulate = Color(1, 1, 1, 0)
position = Vector2(512, 448)

[node name="clock" type="Node2D" parent="."]

[node name="c_left" type="Marker2D" parent="clock"]
position = Vector2(-256, 0)

[node name="c_right" type="Marker2D" parent="clock"]
position = Vector2(1472, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Dialog" parent="CanvasLayer" instance=ExtResource("9_2bpd6")]

[node name="hearts" parent="CanvasLayer" instance=ExtResource("10_btgq6")]

[node name="support" parent="CanvasLayer" instance=ExtResource("11_8qj5j")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Start"
libraries = {
"": SubResource("AnimationLibrary_4g37i")
}

[node name="light_path" type="Path2D" parent="."]
position = Vector2(-4, -9)
curve = SubResource("Curve2D_c6fsr")

[node name="PathFollow2D" type="PathFollow2D" parent="light_path"]
position = Vector2(517.101, 454.985)
rotation = 2.99178
progress = 3468.0

[node name="appear_light" type="PointLight2D" parent="light_path/PathFollow2D"]
visible = false
position = Vector2(0.367218, 0.538025)
color = Color(1, 0.305882, 0.00784314, 1)
energy = 0.0
blend_mode = 2
texture = ExtResource("7_oeoms")

[node name="PathFollow2D2" type="PathFollow2D" parent="light_path"]
position = Vector2(970, 445)
rotation = 2.10216

[node name="appear_light" type="PointLight2D" parent="light_path/PathFollow2D2"]
visible = false
position = Vector2(0.367218, 0.538025)
color = Color(1, 0.305882, 0.00784314, 1)
energy = 16.0
blend_mode = 2
texture = ExtResource("7_oeoms")
texture_scale = 0.6

[node name="PathFollow2D3" type="PathFollow2D" parent="light_path"]
position = Vector2(970, 445)
rotation = 2.10216

[node name="appear_light" type="PointLight2D" parent="light_path/PathFollow2D3"]
visible = false
position = Vector2(0.367218, 0.538025)
color = Color(1, 0.305882, 0.00784314, 1)
energy = 16.0
blend_mode = 2
texture = ExtResource("7_oeoms")
texture_scale = 0.3

[node name="sound" type="AudioStreamPlayer2D" parent="."]
autoplay = true

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_sexhb")
volume_db = 3.0

[node name="enemy_explosion" type="AudioStreamPlayer2D" parent="."]

[node name="skill1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_h16qm")

[node name="skill2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_6qyah")

[node name="skill3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_3efv1")

[connection signal="timeout" from="dialog_start" to="." method="_on_dialog_start_timeout"]
